--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,16 +4,16 @@ services:
     db:
         image: mysql
         restart: always
-        # USER == root
-        # PASSWORD == toor
+        # USER root
+        # PASSWORD toor
         environment: 
             MYSQL_ROOT_PASSWORD: toor
 
         # save it to the Database
         volumes: 
-            - dataBase:/var/lib/mysql
+            - database:/var/lib/mysql
         ports:
-            - 3307:3306
+            - 3307:8888
     os:
         depends_on: 
             - db
@@ -24,5 +24,5 @@ services:
         volumes: 
             - OS:/scripts/
 volumes: 
-    dataBase:
+    database:
     OS:
