Fixed error on compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,15 @@ services:
             - database:/var/lib/mysql
         ports:
             - 3307:8888
+#     os:
+#         depends_on: 
+#             - db
+#         build: .
+
+#         # all files of user are saved
+#         # on OS
+#         volumes: 
+#             - OS:/scripts/
+volumes: 
+     database:
+#     OS:
